基本CRUDを追加

--- a/app/views/supplements/index.html.slim
+++ b/app/views/supplements/index.html.slim
@@ -1,2 +1,23 @@
-h1 Supplements#index
-p Find me in app/views/supplements/index.html.slim
+h1 登録されたサプリメント
+
+= link_to 'サプリを追加する', new_supplement_path, class: 'btn btn-primary'
+
+.mb-3
+table.table.table-hover
+  thread.thread-default
+    tr
+      th= "name"
+      th= "remain"
+      th= "empty_day"
+      th= "remind"
+      th
+    tbody
+      - @supplements.each do |supplement|
+        tr
+          td= supplement.name
+          td= supplement.name
+          td= supplement.name
+          td= supplement.remind
+          td
+            = link_to '編集', edit_supplement_path(supplement), class: 'btn btn-primary mr-3'
+            = link_to '削除', supplement_path(supplement), method: :delete, data: { confirm: "サプリメント「#{supplement.name}」を削除します。"}
