--- a/app/views/supplements/edit.html.slim
+++ b/app/views/supplements/edit.html.slim
@@ -1,2 +1,5 @@
-h1 Supplements#edit
-p Find me in app/views/supplements/edit.html.slim
+h1 サプリメント編集
+
+= render partial: 'form', locals: { supplement: @supplement }
+
+= link_to 'キャンセル', supplements_path
