--- a/app/views/supplements/new.html.slim
+++ b/app/views/supplements/new.html.slim
@@ -1,2 +1,5 @@
-h1 Supplements#new
-p Find me in app/views/supplements/new.html.slim
+h1 サプリメント追加
+
+= render partial: 'form', locals: { supplement: @supplement }
+
+= link_to 'キャンセル', supplements_path
