登録日カラムを追加

--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -19,4 +19,7 @@
   .form-group
     = f.label :remind
     = f.select :remind, { 'リマインドなし':  'リマインドなし', '1日前': '1日前', '2日前': '2日前', '3日前': '3日目前', '5日前': '5日前', '1週間前': '1週間前', '10日前': '10日前', '2週間前': '2週間前' }, { include_blank: '選択してください'}, { class: 'form-control' , required: true }
+  .form-group
+    = f.label :registration_date
+    = f.date_select :registration_date, class: 'form-control', id: 'registration_date'
   =f.submit nil, class: 'btn btn-primary'
