--- a/app/views/supplements/index.html.slim
+++ b/app/views/supplements/index.html.slim
@@ -15,7 +15,11 @@ table.table.table-hover
       - @supplements.each do |supplement|
         tr
           td= supplement.name
-          td= supplement.remaining_quantity
+          td
+            - if supplement.supplement_type == "tablet"
+              = supplement.remaining_quantity.to_s + "(錠)"
+            - elsif supplement.supplement_type == "powder"
+              = supplement.remaining_quantity.to_s + "(g)"
           td= supplement.empty_date
           td= supplement.remind
           td
