--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -1,22 +1,22 @@
 = form_with model: supplement, local: true do |f|
   .form-group
-    = f.label :name
+    = f.label t("supplement.name")
     = f.text_field :name, class: 'form-control', id: 'supplements_name'
   .form-group
-    = f.label :supplement_type
+    = f.label t("supplement.supplement_type")
     .form-check
       = f.radio_button 'supplement_type', 'tablet'
-      = f.label :tablet
+      = f.label t("supplement.tablet")
     .form-check
       = f.radio_button 'supplement_type', 'powder'
-      = f.label :powder
+      = f.label t("supplement.powder")
   .form-group
-    = f.label :content_size
+    = f.label t("supplement.content_size")
     = f.number_field :content_size, class: 'form-control', id: 'content_size'
   .form-group
-    = f.label :daily_intake
+    = f.label t("supplement.daily_intake")
     = f.number_field :daily_intake, class: 'form-control', id: 'daily_intake'
   .form-group
-    = f.label :remind
+    = f.label t("supplement.remind")
     = f.select :remind, { 'リマインドなし':  'リマインドなし', '1日前': '1日前', '2日前': '2日前', '3日前': '3日前', '5日前': '5日前', '1週間前': '1週間前', '10日前': '10日前', '2週間前': '2週間前' }, { include_blank: '選択してください'}, { class: 'form-control' , required: true }
   =f.submit nil, class: 'btn btn-primary'
