--- a/app/views/supplements/edit.html.slim
+++ b/app/views/supplements/edit.html.slim
@@ -1,5 +1,7 @@
 h1= t ".title"
 
+= "サプリ作成日" + @supplement.created_at.strftime('%F').to_s
+
 = render partial: 'form', locals: { supplement: @supplement }
 
 = link_to 'キャンセル', supplements_path
