--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -16,7 +16,7 @@
       = f.number_field :content_size, class: 'form-control', id: 'content_size'
   - else
     .form-group
-      = f.label '残量(内容量を変更したい場合は残量に加えたい分を足して入力してください)'
+      = f.label '内容量(現在の残量に加える分を足して入力してください)'
       = f.number_field :remaining_quantity, class: 'form-control', id: 'remaining_quantity'
   .form-group
     = f.label t("supplement.daily_intake")
