--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,18 @@
 body{
   background: #F8F8FF;
 }
+
+header{
+  background: #8EB8FF;
+}
+
+.nav-items{
+  text-align:right;
+  vertical-align: center;
+}
+
+.nav-item{
+  font-size: 20px;
+  color: #111;
+  margin: 15px;
+}
