--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,12 +11,17 @@ html
   body
     header
       nav
-        - if user_signed_in?
-          = link_to 'プロフィール変更', edit_user_registration_path, class: 'nav-link'
-          = link_to  'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link'
-        - else
-          = link_to 'サインアップ', new_user_registration_path, class: 'nav-link'
-          = link_to 'ログイン', new_user_session_path, class: 'nav-link'
+        .nav-items
+          - if user_signed_in?
+            = link_to  edit_user_registration_path, class: 'nav-item' do
+              | プロフィール変更
+            = link_to destroy_user_session_path, method: :delete, class: 'nav-item' do
+              | ログアウト
+          - else
+            = link_to new_user_registration_path, class: 'nav-item' do
+              | サインアップ
+            = link_to new_user_session_path, class: 'nav-item' do
+              | ログイン
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
