--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
   body
     header
       nav
+        h3  Remaining supplement
         .nav-items
           - if user_signed_in?
             = link_to  edit_user_registration_path, class: 'nav-item' do
