デザインが同じだったので名前を連ねて統一

--- a/app/assets/stylesheets/supplements/form.scss
+++ b/app/assets/stylesheets/supplements/form.scss
@@ -6,11 +6,7 @@
   display: flex;
 }
 
-.form-number-input{
-  width: 250px;
-}
-
-.form-select-tab{
+.form-number-input, .form-select-tab{
   width: 250px;
 }
 
