--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
                 | ログアウト
             - else
               = link_to new_user_registration_path, class: 'nav-item' do
-                | サインアップ
+                | アカウント登録
               = link_to new_user_session_path, class: 'nav-item' do
                 | ログイン
     .container
