--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -1,12 +1,10 @@
-p
-  | Hello 
-  = @resource.email
-  | !
-p
-  | Someone has requested a link to change your password. You can do this through the link below.
-p
-  = link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-p
-  | If you didn't request this, please ignore this email.
-p
-  | Your password won't change until you access the link above and create a new one.
+= t('devise.shared.words.hello')
+br
+= t('devise.mailer.reset_password_instructions.instruction')
+br
+= link_to t('devise.passwords.edit.change_my_password'), edit_password_url(@resource, reset_password_token: @token), class: 'btn btn-primary'
+br
+= t('devise.mailer.reset_password_instructions.instruction_2')
+br
+= t('devise.mailer.reset_password_instructions.instruction_3')
+
