--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,22 +1,20 @@
-h2
-  | Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    br
-    - if @minimum_password_length
+.page-title
+  h3= t('.change_your_password')
+.form-items
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    = f.hidden_field :reset_password_token
+    .form-group
+      = f.label :password, t('.new_password')
+      - if @minimum_password_length
       em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-      br
-    = f.password_field :password, autofocus: true, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Change my password"
-= render "devise/shared/links"
+        = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+      .form-password-input
+        = f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control'
+    .form-group
+      = f.label :password_confirmation, t('.confirm_new_password')
+      .form-password-input
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+    .actions
+      = f.submit t('.change_my_password'), class: 'btn btn-primary'
+  = render "devise/shared/links"
