--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,38 +1,40 @@
-h2
-  | プロフィール編集
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    div
-      | Currently waiting confirmation for: 
-      = resource.unconfirmed_email
-  .field
-    = f.label :password
-    i
-      = t('.leave_blank_if_you_don_t_want_to_change_it')
-    br
-    = f.password_field :password, autocomplete: "new-password"
-    - if @minimum_password_length
-      em
-        = t('devise.shared.minimum_password_length', count: @minimum_password_length)
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    i
-      = t('.we_need_your_current_password_to_confirm_your_changes')
-    br
-    = f.password_field :current_password, autocomplete: "current-password"
-  .actions
-    = f.submit t('.update')
-br
-h3
-  = t('.cancel_my_account')
-= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-= link_to t('devise.shared.links.back'), :back
+.page-title
+  h3 プロフィール編集
+.form-items
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    .form-group
+      = f.label :email
+      .form-email-input
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        | Currently waiting confirmation for: 
+        = resource.unconfirmed_email
+    .form-group
+      = f.label :password
+      i
+        = t('.leave_blank_if_you_don_t_want_to_change_it')
+      .form-password-input
+        = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+        - if @minimum_password_length
+          em
+            = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+    .form-group
+      = f.label :password_confirmation
+      .form-password-input
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+    .form-group
+      = f.label :current_password
+      i
+        = t('.we_need_your_current_password_to_confirm_your_changes')
+      .form-password-input
+        = f.password_field :current_password, autocomplete: "current-password", class: 'form-control'
+    .actions.link-btn
+      = f.submit t('.update'), class: 'btn btn-primary'
+
+  = link_to t('devise.shared.links.back'), :back
+
+.danger-items
+  h4
+    strong= t('.cancel_my_account')
+    = button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-danger link-btn'
