--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,22 +1,23 @@
-h2
-  = t('.sign_up')
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        = t('devise.shared.minimum_password_length', count: @minimum_password_length)
-    br
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit t('.sign_up')
-= render "devise/shared/links"
+.page-title
+  h3= t('.sign_up')
+.form-items
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    .form-group
+      = f.label :email
+      .form-email-input
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+    .form-group
+      = f.label :password
+      - if @minimum_password_length
+        em
+          = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+      .form-password-input
+        = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+    .form-group
+      = f.label :password_confirmation
+      .form-password-input
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+    .actions
+      = f.submit t('.sign_up'), class: 'btn btn-primary'
+  = render "devise/shared/links"
