--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,14 @@ header{
   padding-left: 10px;
 }
 
+footer{
+  position: absolute;
+  bottom: 0;
+  background: #75A9FF;
+  width: 100%;
+  height: 30px;
+}
+
 .nav-container{
   display: flex;
   justify-content: space-between;
