--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,41 +5,4 @@
 @import "devise";
 @import "shared";
 @import "form";
-
-
-body{
-  background: #F8F8FF;
-}
-
-header{
-  background: #8EB8FF;
-  height: 60px;
-  padding-left: 10px;
-}
-
-footer{
-  position: absolute;
-  bottom: 0;
-  background: #75A9FF;
-  width: 100%;
-  height: 30px;
-}
-
-.nav-container{
-  display: flex;
-  justify-content: space-between;
-}
-
-.app-name{
-  padding: 5px;
-}
-
-.nav-items{
-  display: flex;
-}
-
-.nav-item{
-  font-size: 16px;
-  color: #111;
-  margin: 15px;
-}
+@import "layout";
