--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,7 +2,7 @@ header
   nav
     .nav-container
       .app-name
-        h2  Remaining supplement
+        |Remaining supplement
       .nav-items
         - if user_signed_in?
           = link_to  edit_user_registration_path, class: 'nav-item' do
