--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -23,7 +23,7 @@
     - else
       .form-group.form-item
         .form-label
-          = f.label '内容量(現在の残量に加える分を足して入力してください)'
+          = f.label '内容量(残量に足して入力してください)'
         .form-number-input
           = f.number_field :remaining_quantity, class: 'form-control', id: 'remaining_quantity'
     .form-group.form-item
