--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -29,12 +29,12 @@
         = t('.we_need_your_current_password_to_confirm_your_changes')
       .form-password-input
         = f.password_field :current_password, autocomplete: "current-password", class: 'form-control'
-    .actions.link-btn
+    .actions.form-btn
       = f.submit t('.update'), class: 'btn btn-primary'
-
-  = link_to t('devise.shared.links.back'), :back
+    .form-btn
+      = link_to t('devise.shared.links.back'), :back
 
 .danger-items
   h4
     strong= t('.cancel_my_account')
-    = button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-danger link-btn'
+    = button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-danger form-btn'
