--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,4 +1,5 @@
 body{
+  position: relative;
   background: #F8F8FF;
   height: 100%;
   min-height: 100vh;
@@ -11,6 +12,7 @@ header{
 
 footer{
   position: absolute;
+  margin-top: 140px;
   bottom: 0;
   background: #75A9FF;
   width: 100%;
