--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,8 @@ html
     = render 'layouts/header'
     .container
       - if flash.notice.present?
-        .alert.alert-success= flash.notice
+        .alert.alert-success = flash.notice
+      - if flash.alert.present?
+        .alert.alert-warning = flash.alert
     = yield
     = render 'layouts/footer'
