--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -19,6 +19,14 @@ footer{
   height: 30px;
 }
 
+ul#error_explanation{
+  list-style-position: inside;
+}
+
+.error-word{
+  font-size: 12px;
+}
+
 .nav-container{
   display: flex;
   justify-content: space-between;
@@ -32,10 +40,12 @@ footer{
   display: flex;
 }
 
-.nav-item{
-  font-size: 16px;
-  color: #111;
-  margin: 15px;
+.error-container{
+  margin: 15px 0;
+  padding: 10px;
+  color: #B22222;
+  background-color: #FFF0F5;
+  border: 1px solid #FF1493;
 }
 
 @media (max-width: 767.98px) {
