deviseのi18n(日本語)を解除

--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -1,10 +1,10 @@
-= t('devise.shared.words.hello')
+p いつもご利用ありがとうございます。
 br
-= t('devise.mailer.reset_password_instructions.instruction')
+p パスワード再設定の依頼を受けたため、メールを送信しています。下のリンクからパスワードの再設定ができます。
 br
-= link_to t('devise.passwords.edit.change_my_password'), edit_password_url(@resource, reset_password_token: @token), class: 'btn btn-primary'
+= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token), class: 'btn btn-primary'
 br
-= t('devise.mailer.reset_password_instructions.instruction_2')
+p パスワード再設定の依頼をしていない場合、このメールを無視してください。
 br
-= t('devise.mailer.reset_password_instructions.instruction_3')
+p パスワードの再設定は、上のリンクから新しいパスワードを登録するまで完了しません。
 
