--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -1,5 +1,5 @@
 .page-title
-  h3= t('.resend_confirmation_instructions')
+  h3 アカウント確認メール再送
 .form-itemse
   = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
     = render "devise/shared/error_messages", resource: resource
@@ -8,5 +8,5 @@
       .form-email-input
         = f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control'
     .actions.link-btn
-      = f.submit t('.resend_confirmation_instructions'), class: 'btn btn-primary'
+      = f.submit 'メールを送信する', class: 'btn btn-primary'
   = render "devise/shared/links"
