--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -7,34 +7,24 @@
       = f.label :email
       .form-email-input
         = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-        | Currently waiting confirmation for: 
-        = resource.unconfirmed_email
     .form-group
-      = f.label :password
-      i
-        = t('.leave_blank_if_you_don_t_want_to_change_it')
+      = f.label :password, '新しいパスワード(6文字以上)'
       .form-password-input
         = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-        - if @minimum_password_length
-          em
-            = t('devise.shared.minimum_password_length', count: @minimum_password_length)
     .form-group
-      = f.label :password_confirmation
+      = f.label :password_confirmation, '新しいパスワード(確認用)'
       .form-password-input
         = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
     .form-group
-      = f.label :current_password
-      i
-        = t('.we_need_your_current_password_to_confirm_your_changes')
+      = f.label :current_password, '現在のパスワード(変更を保存する場合)'
       .form-password-input
         = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
     .actions.form-btn
-      = f.submit t('.update'), class: 'btn btn-primary'
+      = f.submit '更新する', class: 'btn btn-primary'
     .form-btn
-      = link_to t('devise.shared.links.back'), :back
+      = link_to '戻る', :back
 
 .danger-items
   h4
-    strong= t('.cancel_my_account')
-    = button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-danger form-btn'
+    strong アカウント削除
+    = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn btn-danger form-btn'
