--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
 .page-title
-  h3= t('.sign_up')
+  h3 アカウント作成
 .form-items
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = render "devise/shared/error_messages", resource: resource
@@ -8,10 +8,7 @@
       .form-email-input
         = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
     .form-group
-      = f.label :password
-      - if @minimum_password_length
-        em
-          = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+      = f.label :password, 'パスワード(6文字以上)'
       .form-password-input
         = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
     .form-group
@@ -19,5 +16,5 @@
       .form-password-input
         = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
     .actions
-      = f.submit t('.sign_up'), class: 'btn btn-primary'
+      = f.submit '登録する', class: 'btn btn-primary'
   = render "devise/shared/links"
