--- a/app/views/devise/shared/_error_messages.html.slim
+++ b/app/views/devise/shared/_error_messages.html.slim
@@ -1,10 +1,5 @@
 - if resource.errors.any?
   .error-container
-    strong
-      = I18n.t("errors.messages.not_saved",
-        count: resource.errors.count,
-        resource: resource.class.model_name.human.downcase)
     ul
       - resource.errors.full_messages.each do |message|
-        li
-          = message
+        li= message
