--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -7,22 +7,22 @@
   = form_with model: supplement, local: true do |f|
     .form-group.form-item
       .form-label
-        = f.label t("supplement.name")
+        = f.label 'サプリ名'
       .form-name-input
         = f.text_field :name, class: 'form-control', id: 'name'
     .form-group.form-item
       .form-label
-        = f.label t("supplement.supplement_type")
+        = f.label 'サプリメントタイプ'
       .form-check.form-radio-items
         = f.radio_button 'supplement_type', 'tablet', checked: true
-        = f.label t("supplement.tablet")
+        = f.label '錠剤'
       .form-check.form-radio-items
         = f.radio_button 'supplement_type', 'powder'
-        = f.label t("supplement.powder")
+        = f.label '粉類'
     - if request.path == '/supplements/new'
       .form-group.form-item
         .form-label
-          = f.label t("supplement.content_size")
+          = f.label '内容量'
         .form-number-input
           = f.number_field :content_size, class: 'form-control', id: 'content_size'
     - else
@@ -33,12 +33,12 @@
           = f.number_field :remaining_quantity, class: 'form-control', id: 'remaining_quantity'
     .form-group.form-item
       .form-label
-        = f.label t("supplement.daily_intake")
+        = f.label '1日あたりの摂取量'
       .form-number-input
         = f.number_field :daily_intake, class: 'form-control', id: 'daily_intake'
     .form-group.form-item
       .form-label
-        = f.label t("supplement.remind")
+        = f.label 'リマインド'
       .form-select-tab
         = f.select :remind, { 'リマインドなし':  'リマインドなし', '1日前': '1日前', '2日前': '2日前', '3日前': '3日前', '5日前': '5日前', '1週間前': '1週間前', '10日前': '10日前', '2週間前': '2週間前' }, { include_blank: '選択してください'}, { class: 'form-control' , required: true }
     =f.submit nil, class: 'btn btn-primary form-btn' do
