--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -7,12 +7,12 @@
   = form_with model: supplement, local: true do |f|
     .form-group.form-item
       .form-label
-        = f.label 'サプリ名'
+        = f.label :name, 'サプリ名'
       .form-name-input
         = f.text_field :name, class: 'form-control', id: 'name'
     .form-group.form-item
       .form-label
-        = f.label 'サプリメントタイプ'
+        = f.label :supplement_type, 'サプリメントタイプ'
       .form-check.form-radio-items
         = f.radio_button 'supplement_type', 'tablet', checked: true
         = f.label '錠剤'
@@ -22,23 +22,23 @@
     - if request.path == '/supplements/new'
       .form-group.form-item
         .form-label
-          = f.label '内容量'
+          = f.label :content_size, '内容量'
         .form-number-input
           = f.number_field :content_size, class: 'form-control', id: 'content_size'
     - else
       .form-group.form-item
         .form-label
-          = f.label '内容量(残量に足して入力してください)'
+          = f.label :remaining_quantity, '内容量(残量に足して入力してください)'
         .form-number-input
           = f.number_field :remaining_quantity, class: 'form-control', id: 'remaining_quantity'
     .form-group.form-item
       .form-label
-        = f.label '1日あたりの摂取量'
+        = f.label :daily_intake, '1日あたりの摂取量'
       .form-number-input
         = f.number_field :daily_intake, class: 'form-control', id: 'daily_intake'
     .form-group.form-item
       .form-label
-        = f.label 'リマインド'
+        = f.label :remind, 'リマインド'
       .form-select-tab
         = f.select :remind, { 'リマインドなし':  'リマインドなし', '1日前': '1日前', '2日前': '2日前', '3日前': '3日前', '5日前': '5日前', '1週間前': '1週間前', '10日前': '10日前', '2週間前': '2週間前' }, { include_blank: '選択してください'}, { class: 'form-control' , required: true }
     =f.submit nil, class: 'btn btn-primary form-btn' do
