--- a/app/views/supplements/_form.html.slim
+++ b/app/views/supplements/_form.html.slim
@@ -19,18 +19,14 @@
       .form-check.form-radio-items
         = f.radio_button 'supplement_type', 'powder'
         = f.label '粉類'
-    - if request.path == '/supplements/new'
       .form-group.form-item
         .form-label
-          = f.label :content_size, '内容量'
+          - if request.path == '/supplements/new'
+            = f.label :content_size, '内容量'
+          - else
+            = f.label :content_size, '内容量(残量に足して入力してください)'
         .form-number-input
           = f.number_field :content_size, class: 'form-control', id: 'content_size'
-    - else
-      .form-group.form-item
-        .form-label
-          = f.label :remaining_quantity, '内容量(残量に足して入力してください)'
-        .form-number-input
-          = f.number_field :remaining_quantity, class: 'form-control', id: 'remaining_quantity'
     .form-group.form-item
       .form-label
         = f.label :daily_intake, '1日あたりの摂取量'
