--- a/app/views/devise/mailer/reset_password_instructions.html.slim
+++ b/app/views/devise/mailer/reset_password_instructions.html.slim
@@ -2,7 +2,7 @@ p いつもご利用ありがとうございます。
 br
 p パスワード再設定の依頼を受けたため、メールを送信しています。下のリンクからパスワードの再設定ができます。
 br
-= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token), class: 'btn btn-primary'
+= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token)
 br
 p パスワード再設定の依頼をしていない場合、このメールを無視してください。
 br
