--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -4,14 +4,14 @@
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
     = render "devise/shared/error_messages", resource: resource
     = f.hidden_field :reset_password_token
-    .form-group
+    .form-item
       = f.label :password, '新しいパスワード(6文字以上)'
       .form-password-input
-        = f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control'
-    .form-group
+        = f.password_field :password, autofocus: true, autocomplete: "new-password"
+    .form-item
       = f.label :password_confirmation, '新しいパスワード(確認用)'
       .form-password-input
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+        = f.password_field :password_confirmation, autocomplete: "new-password"
     .actions
-      = f.submit '変更する', class: 'btn btn-primary'
+      = f.submit '変更する', class: 'btn-form'
   = render "devise/shared/links"
