--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -4,10 +4,10 @@
 .form-items
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
     = render "devise/shared/error_messages", resource: resource
-    .form-group
+    .form-item
       = f.label :email
       .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+        = f.email_field :email, autofocus: true, autocomplete: "email"'
     .actions
-      = f.submit "認証メールを送信する", class: 'btn btn-primary link-btn'
+      = f.submit "認証メールを送信する", class: 'link-btn'
   = render "devise/shared/links"
