--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -3,28 +3,28 @@
 .form-items
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = render "devise/shared/error_messages", resource: resource
-    .form-group
+    .form-item
       = f.label :email
       .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-    .form-group
+        = f.email_field :email, autofocus: true, autocomplete: "email", id: 'email'
+    .form-item
       = f.label :password, '新しいパスワード(6文字以上)'
       .form-password-input
-        = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-    .form-group
+        = f.password_field :password, autocomplete: "new-password", id: 'password'
+    .form-item
       = f.label :password_confirmation, '新しいパスワード(確認用)'
       .form-password-input
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
-    .form-group
+        = f.password_field :password_confirmation, autocomplete: "new-password", id: 'password_confirmation'
+    .form-item
       = f.label :current_password, '現在のパスワード(変更を保存する場合)'
       .form-password-input
-        = f.password_field :current_password, autocomplete: "current-password", class: 'form-control', id: 'current_password'
+        = f.password_field :current_password, autocomplete: "current-password", id: 'current_password'
     .actions.form-btn
-      = f.submit '更新する', class: 'btn btn-primary'
+      = f.submit '更新する', class: 'btn-form'
     .form-btn
       = link_to '戻る', :back
 
 .danger-items
   h4
     strong アカウント削除
-    = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'btn btn-danger form-btn'
+    = button_to '削除する', registration_path(resource_name), data: { confirm: '本当によろしいですか？' }, method: :delete, class: 'form-btn'
