--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -3,18 +3,18 @@
 .form-items
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = render "devise/shared/error_messages", resource: resource
-    .form-group
+    .form-item
       = f.label :email
       .form-email-input
-        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', id: 'email'
-    .form-group
+        = f.email_field :email, autofocus: true, autocomplete: "email", id: 'email'
+    .form-item
       = f.label :password, 'パスワード(6文字以上)'
       .form-password-input
-        = f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'password'
-    .form-group
+        = f.password_field :password, autocomplete: "new-password", id: 'password'
+    .form-item
       = f.label :password_confirmation
       .form-password-input
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation'
+        = f.password_field :password_confirmation, autocomplete: "new-password"", id: 'password_confirmation'
     .actions
-      = f.submit '登録する', class: 'btn btn-primary'
+      = f.submit '登録する', class: 'btn-form'
   = render "devise/shared/links"
